k8s/core/turbo-cache/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: turbo-cache
  namespace: lilnas-core
spec:
  type: ClusterIP
  selector:
    app: turbo-cache
  ports:
    - port: 3000
      targetPort: 3000
