k8s/core/turbo-cache/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: turbo-cache
  namespace: lilnas-core
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - turbo.lilnas.io
      secretName: turbo-cache-tls
  rules:
    - host: turbo.lilnas.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: turbo-cache
                port:
                  number: 3000
